# lumid.hooks

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: check-pr-title.yml  check-signoff.yml  lint-typecheck.yml  package-build.yml  release.yml  security.yml
docs/: RELEASE.md
examples/simple_plugin/: README.md  __init__.py  identity.py  permissions.py  registrar.py  state.py  submission.py  usage.py
scripts/ci/: check_package_build.py  check_pr_title.py  check_release_version.py  check_signoff.sh  prepare_commit_msg.sh
src/lumid_hooks/: __init__.py  bindings.py  identity.py  permissions.py  principal.py  registrar.py  resource.py  submission.py  usage.py
tests/: test_protocols.py
