[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumid-hooks"
version = "0.1.0"
description = "Shared plugin contract surface for Lumid projects"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
lumid_hooks = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
